js262/test/language/statements/await-using/syntax/without-initializer-for-statement.js


/*---
esid: sec-for-statement
description: >
    await using declarations without initialisers in statement positions:
    for ( ;;) Statement
negative:
  phase: parse
  type: SyntaxError
features: [explicit-resource-management]
---*/

$DONOTEVALUATE();
async function f() {
  for (;false;) await using x;
}
